[workspace]
resolver = "3"
members = ["boa-server", "library/boa-www-backend", "library/boa-core"]

[workspace.dependencies]
boa-core = { path = "./library/boa-core/" }
boa-www-backend = { path = "./library/boa-www-backend" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
