[package]
name = "boa-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
boa-core = { workspace = true }
tokio = { version = "1.48.0", features = ["full"] }

[lints]
workspace = true
