[package]
name = "boa-server"
version = "0.1.0"
edition = "2024"

[dependencies]
boa-core = { workspace = true }
axum = { version = "0.8.7", features = ["ws"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
bollard = "0.19.5"
uuid = { version = "1.19.0", features = ["v4"] }
owo-colors = "4.2.3"
futures-util = "0.3.31"
tempfile = "3.23.0"
tar = "0.4.44"

[lints]
workspace = true
