[package]
name = "boa-www"
version = "0.1.0"
edition = "2024"

[dependencies]
boa-core = { workspace = true }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-net = { version = "0.6", features = ["websocket"] }
gloo-console = "0.3"
serde_json = "1"
wasm-bindgen-futures = "0.4"
futures-util = "0.3.31"
futures-channel = "0.3.31"

[lints]
workspace = true
